# qpp-examples

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  CMakeUserPresets.json  LICENSE  README.md  buildfile  conanfile.py  conanfile.qpp.py  manifest  pixi.toml  repositories.manifest
cmake/: provider.cmake
qpp-examples/: .gitignore  CMakeLists.txt  buildfile  version.hpp.in
qpp-examples/examples/: CMakeLists.txt  SourcesLists.cmake  chapter1.test.cpp
qpp-examples/magniez_cdf/: CMakeLists.txt  SourcesLists.cmake  perdrix.test.cpp  perdrix.test.py
qpp-examples/maths/: CMakeLists.txt  SourcesLists.cmake  all.mpp  arithmetic.hpp  arithmetic.test.cpp  compare.hpp  compare.test.cpp  concepts.hpp  concepts.test.cpp  gtest_macros.hpp  random.hpp  random.test.cpp
qpp-examples/nielsen_chuang/: CMakeLists.txt
qpp-examples/nielsen_chuang/chapter1/: CMakeLists.txt  SourcesLists.cmake  chapter1.2.test.cpp  chapter1.3.test.cpp  chapter1.4.test.cpp  chapter1.5.test.cpp  dummy.test.cpp
qpp-examples/nielsen_chuang/chapter2/: CMakeLists.txt  SourcesLists.cmake  chapter2.2.test.cpp  chapter2.3.test.cpp  chapter2.4.test.cpp  chapter2.5.test.cpp  chapter2.6.test.cpp
qpp-examples/nielsen_chuang/chapter4/: CMakeLists.txt  SourcesLists.cmake  chapter4.2.test.cpp  chapter4.3.test.cpp  chapter4.4.test.cpp  chapter4.5.1.test.cpp  chapter4.5.2.test.cpp  chapter4.5.3.test.cpp  chapter4.5.test.cpp  chapter4.7.1.test.cpp  chapter4.7.2.test.cpp
qpp-examples/qube/: CMakeLists.txt  SourcesLists.cmake  debug.hpp  decompositions.hpp  introspection.hpp
qpp-examples/warnings/: CMakeLists.txt
qube/: CMakeLists.txt
qube/maths/: CMakeLists.txt  SourcesLists.cmake
qube/qube/: CMakeLists.txt  SourcesLists.cmake  approximations.hpp  debug.hpp  decompositions.hpp  gates.hpp  gates.test.cpp  introspection.hpp
qube/qube/maths/: arithmetic.hpp  concepts.hpp  concepts.test.cpp  gtest_macros.hpp  norm.hpp  random.hpp
qube/warnings/: CMakeLists.txt  SourcesLists.cmake
scripts/: build2.sh  conan.py
